[gd_scene load_steps=4 format=3 uid="uid://bqm8x5q2n7kya"]

[ext_resource type="Script" uid="uid://c014faradhpy2" path="res://scripts/stations/HelmStation.gd" id="1_0x8vq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.05, 0.05, 0.15, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.6, 1, 0.5)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.1, 0.1, 0.2, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.8, 1, 0.7)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="HelmStation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0x8vq")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.02, 0.08, 1)

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanel" type="VBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="ConnectionStatus" type="Panel" parent="MainContainer/LeftPanel"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="StatusContainer" type="VBoxContainer" parent="MainContainer/LeftPanel/ConnectionStatus"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="StationTitle" type="Label" parent="MainContainer/LeftPanel/ConnectionStatus/StatusContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 14
text = "HELM STATION"
horizontal_alignment = 1

[node name="ConnectionLabel" type="Label" parent="MainContainer/LeftPanel/ConnectionStatus/StatusContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 12
text = "Status: DISCONNECTED"
horizontal_alignment = 1

[node name="NavigationControls" type="Panel" parent="MainContainer/LeftPanel"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="NavContainer" type="VBoxContainer" parent="MainContainer/LeftPanel/NavigationControls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="NavTitle" type="Label" parent="MainContainer/LeftPanel/NavigationControls/NavContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 14
text = "NAVIGATION CONTROLS"

[node name="CurrentHeading" type="Label" parent="MainContainer/LeftPanel/NavigationControls/NavContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "Current Heading: 0Â°"

[node name="CurrentSpeed" type="Label" parent="MainContainer/LeftPanel/NavigationControls/NavContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "Current Speed: 0.0 m/s"

[node name="DesiredHeadingContainer" type="HBoxContainer" parent="MainContainer/LeftPanel/NavigationControls/NavContainer"]
layout_mode = 2

[node name="HeadingLabel" type="Label" parent="MainContainer/LeftPanel/NavigationControls/NavContainer/DesiredHeadingContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Desired Heading:"

[node name="HeadingInput" type="SpinBox" parent="MainContainer/LeftPanel/NavigationControls/NavContainer/DesiredHeadingContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -180.0
max_value = 180.0

[node name="WarpFactorContainer" type="HBoxContainer" parent="MainContainer/LeftPanel/NavigationControls/NavContainer"]
layout_mode = 2

[node name="WarpLabel" type="Label" parent="MainContainer/LeftPanel/NavigationControls/NavContainer/WarpFactorContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Warp Factor:"

[node name="WarpSlider" type="HSlider" parent="MainContainer/LeftPanel/NavigationControls/NavContainer/WarpFactorContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0

[node name="WarpValue" type="Label" parent="MainContainer/LeftPanel/NavigationControls/NavContainer/WarpFactorContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "1.0x"

[node name="AutopilotPanel" type="Panel" parent="MainContainer/LeftPanel"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="AutopilotContainer" type="VBoxContainer" parent="MainContainer/LeftPanel/AutopilotPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="AutopilotTitle" type="Label" parent="MainContainer/LeftPanel/AutopilotPanel/AutopilotContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 14
text = "AUTOPILOT SYSTEM"

[node name="AutopilotModeOption" type="OptionButton" parent="MainContainer/LeftPanel/AutopilotPanel/AutopilotContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")

[node name="AutopilotStatus" type="Label" parent="MainContainer/LeftPanel/AutopilotPanel/AutopilotContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Status: Manual Control"

[node name="PresetManeuvers" type="VBoxContainer" parent="MainContainer/LeftPanel/AutopilotPanel/AutopilotContainer"]
layout_mode = 2

[node name="ManeuversLabel" type="Label" parent="MainContainer/LeftPanel/AutopilotPanel/AutopilotContainer/PresetManeuvers"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Preset Maneuvers:"

[node name="ManeuverButtons" type="GridContainer" parent="MainContainer/LeftPanel/AutopilotPanel/AutopilotContainer/PresetManeuvers"]
layout_mode = 2
columns = 2

[node name="StationKeepingButton" type="Button" parent="MainContainer/LeftPanel/AutopilotPanel/AutopilotContainer/PresetManeuvers/ManeuverButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Station
Keeping"

[node name="EvasiveButton" type="Button" parent="MainContainer/LeftPanel/AutopilotPanel/AutopilotContainer/PresetManeuvers/ManeuverButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Evasive
Maneuvers"

[node name="InterceptButton" type="Button" parent="MainContainer/LeftPanel/AutopilotPanel/AutopilotContainer/PresetManeuvers/ManeuverButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Intercept
Course"

[node name="EmergencyStopButton" type="Button" parent="MainContainer/LeftPanel/AutopilotPanel/AutopilotContainer/PresetManeuvers/ManeuverButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Emergency
Stop"

[node name="InputDeviceStatus" type="Panel" parent="MainContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="InputContainer" type="VBoxContainer" parent="MainContainer/LeftPanel/InputDeviceStatus"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="InputTitle" type="Label" parent="MainContainer/LeftPanel/InputDeviceStatus/InputContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 14
text = "INPUT DEVICES"

[node name="HOTASStatus" type="Label" parent="MainContainer/LeftPanel/InputDeviceStatus/InputContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "HOTAS: Not Connected"

[node name="YokeStatus" type="Label" parent="MainContainer/LeftPanel/InputDeviceStatus/InputContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "Flight Yoke: Not Connected"

[node name="InputReadings" type="VBoxContainer" parent="MainContainer/LeftPanel/InputDeviceStatus/InputContainer"]
layout_mode = 2

[node name="ThrottleReading" type="Label" parent="MainContainer/LeftPanel/InputDeviceStatus/InputContainer/InputReadings"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 10
text = "Throttle: 0%"

[node name="RudderReading" type="Label" parent="MainContainer/LeftPanel/InputDeviceStatus/InputContainer/InputReadings"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 10
text = "Rudder: 0%"

[node name="PitchReading" type="Label" parent="MainContainer/LeftPanel/InputDeviceStatus/InputContainer/InputReadings"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 10
text = "Pitch: 0%"

[node name="RollReading" type="Label" parent="MainContainer/LeftPanel/InputDeviceStatus/InputContainer/InputReadings"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 10
text = "Roll: 0%"

[node name="CenterPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NavigationMap" type="Panel" parent="MainContainer/CenterPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="MapContainer" type="VBoxContainer" parent="MainContainer/CenterPanel/NavigationMap"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="MapTitle" type="Label" parent="MainContainer/CenterPanel/NavigationMap/MapContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 16
text = "SECTOR NAVIGATION MAP"
horizontal_alignment = 1

[node name="MapViewport" type="SubViewport" parent="MainContainer/CenterPanel/NavigationMap/MapContainer"]
render_target_update_mode = 4

[node name="NavCamera" type="Camera2D" parent="MainContainer/CenterPanel/NavigationMap/MapContainer/MapViewport"]
zoom = Vector2(0.005, 0.005)

[node name="NavigationObjects" type="Node2D" parent="MainContainer/CenterPanel/NavigationMap/MapContainer/MapViewport"]

[node name="WaypointSystem" type="Node2D" parent="MainContainer/CenterPanel/NavigationMap/MapContainer/MapViewport"]

[node name="MapControls" type="HBoxContainer" parent="MainContainer/CenterPanel/NavigationMap/MapContainer"]
layout_mode = 2

[node name="ZoomOutButton" type="Button" parent="MainContainer/CenterPanel/NavigationMap/MapContainer/MapControls"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Zoom Out"

[node name="ZoomInButton" type="Button" parent="MainContainer/CenterPanel/NavigationMap/MapContainer/MapControls"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Zoom In"

[node name="CenterButton" type="Button" parent="MainContainer/CenterPanel/NavigationMap/MapContainer/MapControls"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Center on Ship"

[node name="PlotCourseButton" type="Button" parent="MainContainer/CenterPanel/NavigationMap/MapContainer/MapControls"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Plot Course"

[node name="ClearWaypointsButton" type="Button" parent="MainContainer/CenterPanel/NavigationMap/MapContainer/MapControls"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Clear Route"

[node name="RightPanel" type="VBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="ProximityAlerts" type="Panel" parent="MainContainer/RightPanel"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="AlertContainer" type="VBoxContainer" parent="MainContainer/RightPanel/ProximityAlerts"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="AlertTitle" type="Label" parent="MainContainer/RightPanel/ProximityAlerts/AlertContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 14
text = "PROXIMITY ALERTS"

[node name="CollisionWarning" type="Label" parent="MainContainer/RightPanel/ProximityAlerts/AlertContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "All Clear"
horizontal_alignment = 1

[node name="AlertsScroll" type="ScrollContainer" parent="MainContainer/RightPanel/ProximityAlerts/AlertContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AlertsVBox" type="VBoxContainer" parent="MainContainer/RightPanel/ProximityAlerts/AlertContainer/AlertsScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TravelLog" type="Panel" parent="MainContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="LogContainer" type="VBoxContainer" parent="MainContainer/RightPanel/TravelLog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="LogTitle" type="Label" parent="MainContainer/RightPanel/TravelLog/LogContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 14
text = "TRAVEL LOG"

[node name="LogScroll" type="ScrollContainer" parent="MainContainer/RightPanel/TravelLog/LogContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LogText" type="RichTextLabel" parent="MainContainer/RightPanel/TravelLog/LogContainer/LogScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "[color=green]Helm Station Online[/color]
[color=gray]Ready for navigation commands[/color]"
scroll_following = true

[node name="LogControls" type="HBoxContainer" parent="MainContainer/RightPanel/TravelLog/LogContainer"]
layout_mode = 2

[node name="ClearLogButton" type="Button" parent="MainContainer/RightPanel/TravelLog/LogContainer/LogControls"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Clear"

[node name="SaveLogButton" type="Button" parent="MainContainer/RightPanel/TravelLog/LogContainer/LogControls"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Save"

[node name="WaypointList" type="Panel" parent="MainContainer/RightPanel"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="WaypointContainer" type="VBoxContainer" parent="MainContainer/RightPanel/WaypointList"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="WaypointTitle" type="Label" parent="MainContainer/RightPanel/WaypointList/WaypointContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 14
text = "WAYPOINTS"

[node name="WaypointScroll" type="ScrollContainer" parent="MainContainer/RightPanel/WaypointList/WaypointContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="WaypointVBox" type="VBoxContainer" parent="MainContainer/RightPanel/WaypointList/WaypointContainer/WaypointScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WaypointControls" type="HBoxContainer" parent="MainContainer/RightPanel/WaypointList/WaypointContainer"]
layout_mode = 2

[node name="AddWaypointButton" type="Button" parent="MainContainer/RightPanel/WaypointList/WaypointContainer/WaypointControls"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Add"

[node name="RemoveWaypointButton" type="Button" parent="MainContainer/RightPanel/WaypointList/WaypointContainer/WaypointControls"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Remove"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -40.0
offset_right = 110.0
offset_bottom = -10.0
grow_vertical = 0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "â Main Menu"
